<resources>
    <string name="app_name">AndroidMsk</string>
    <string name="info1">Senior Android Developer</string>
    <string name="info2">Amazon CEO</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in erat et est vestibulum porta eget ac velit. Suspendisse consequat.</string>
    <string name="emailHint">Enter message</string>
    <string name="sendMessage">Send message</string>
    <string name="email">ulamog345@gmail.com</string>
    <string name="instagram">https://instagram.com/ruintheceremony/</string>
    <string name="vk">https://vk.com/topmageinru</string>
    <string name="telegram">Lol nope</string>
    <string name="disclaimer">\@2018 | Nikita Tipun</string>
    <string name="about">About</string>
    <string name="reloadNews">Reload</string>
    <string name="welcome">Welcome</string>

    <string-array name="sections">
        <item>Movies</item>
        <item>Theater</item>
        <item>Sunday Review</item>
        <item>Fashion</item>
        <item>Magazine</item>
        <item>Food</item>
        <item>Travel</item>
        <item>Technology</item>
    </string-array>

    <string name="title_activity_intro2">IntroActivity2</string>
    <string name="edit_dialog_title">Title</string>
    <string name="edit_dialog">Edit news</string>
    <string name="edit_dialog_url">URL</string>
    <string name="edit_dialog_section">Section</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
</resources>
