<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/edit_dialog_padding">

    <EditText
        android:id="@+id/newsTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_dialog_et_height"
        android:layout_marginTop="@dimen/edit_dialog_margin"
        android:ellipsize="end"
        android:hint="@string/edit_dialog_title"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newsUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_dialog_et_height"
        android:ellipsize="end"
        android:gravity="start|top"
        android:hint="@string/edit_dialog_url"
        android:inputType="textUri"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsTitle" />

    <TextView
        android:id="@+id/sectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/edit_dialog_margin"
        android:gravity="center"
        android:text="@string/edit_dialog_section"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toBottomOf="@id/newsSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsUrl" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/newsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sectionTitle"
        app:layout_constraintTop_toTopOf="@id/sectionTitle" />


</android.support.constraint.ConstraintLayout>