<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_card_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height_big_vert"
        android:scaleType="centerCrop"
        android:src="@drawable/pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vertical_padding">

            <LinearLayout
                android:id="@+id/ll_main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/inner_padding_big_port"
                android:paddingRight="@dimen/inner_padding_big_port">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/titles_height_big"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/titles_height_big"
                        android:layout_height="@dimen/titles_height_big"
                        android:src="@drawable/android" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/info1"
                        android:textSize="@dimen/text_size_big" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/titles_height_big"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/titles_height_big"
                        android:layout_height="@dimen/titles_height_big"
                        android:src="@drawable/amazon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/info2"
                        android:textSize="@dimen/text_size_big" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/separatorColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/description"
                    android:textSize="@dimen/text_size_big" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/separatorColor" />

                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/ll_main_info"
                android:layout_below="@id/ll_main_info"
                android:layout_marginEnd="@dimen/inner_padding_big_port"
                android:layout_marginTop="10dp"
                android:text="@string/sendMessage"
                android:textAllCaps="true"
                android:textColor="@color/clickableText"
                android:textSize="@dimen/text_size_big" />

            <LinearLayout
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_send_message"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/ib_inst"
                    android:layout_width="@dimen/icons_big"
                    android:layout_height="@dimen/icons_big"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/instagram" />

                <ImageButton
                    android:id="@+id/ib_tel"
                    android:layout_width="@dimen/icons_big"
                    android:layout_height="@dimen/icons_big"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/telegram" />

                <ImageButton
                    android:id="@+id/ib_gplus"
                    android:layout_width="@dimen/icons_big"
                    android:layout_height="@dimen/icons_big"
                    android:layout_margin="10dp"
                    android:src="@drawable/google_plus" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
